# DiagnosticHub

./: README.md
example/studyAnalysis/frontend/: package-lock.json  package.json
example/studyAnalysis/frontend/src/: App.jsx  Graph.jsx  index.css
example/studyAnalysis/server/: data.db  server.js
example/wearable/: ble_server.ino
example/wearable/ble_server/: ble_server.ino
receiver/: CMakeLists.txt  README.md
receiver/performance/: analyse.py  analyse_fps.py
receiver/performance/data/: cpu_usage.csv  fps_log_2025-06-09_18-36-36.csv  mem_usage.csv
receiver/setup/: local.conf  setup.sh
receiver/src/: Main.qml  main.cpp
receiver/src/QtButtonImageProvider/: CMakeLists.txt  QtButton.qml  plugin.cpp  qtbuttonimageprovider.cpp  qtbuttonimageprovider.h
receiver/src/SettingsUI/: SettingsUI.qml
receiver/src/SettingsUI/Network/: CustomSwitch.qml  CustomTableView.qml  NetworkListView.qml  NetworkSettings.qml  PassphraseEnter.qml  WifiSettings.qml  WiredSettings.qml
receiver/src/SettingsUI/Network/icons/: generate_icons.sh
receiver/src/SettingsUI/Network/icons/scripts/: cimages.sh  rimage.sh
receiver/src/audio/: SoundTest.qml
receiver/src/background/: WifiScreen.qml  audioPlayer.cpp  audioPlayer.h  wifimanager.cpp  wifimanager.h
receiver/src/background/ble/: BLETest.qml  Characteristics.qml  Devices.qml  Services.qml  characteristicinfo.cpp  characteristicinfo.h  connectionworker.cpp  connectionworker.h  device.cpp  device.h
receiver/src/background/buffer/: buffer.cpp  buffer.h  database.cpp  database.h  datapacket.h  senderworker.h
receiver/src/background/diagnostic/: fpsmonitor.cpp  fpsmonitor.h
receiver/src/background/hardware/: power.cpp  power.h
receiver/src/background/notification/: mmapgpio.h  notification.cpp  notification.h  notificationmanager.cpp  notificationmanager.h
receiver/src/background/thread/: mainthreadbridge.cpp  mainthreadbridge.h
receiver/src/common/: AutoScroller.qml  BackButton.qml  Constants.qml  Keyboard.qml  TapHint.qml
receiver/src/devices/: device.cpp  device.h  devicelist.cpp  devicelist.h
receiver/src/home/: HomeScreen.qml  SettingsButton.qml
receiver/src/onboarding/: OnboardingScreen.qml
receiver/src/question/: QuestionScreen.qml
receiver/src/request/: devicefetcher.cpp  devicefetcher.h  networkmanager.cpp  networkmanager.h
receiver/src/settings/: SettingsProgressBar.qml  SettingsScreen.qml
receiver/src/settings/item/: Colours.qml  Language.qml  Notifications.qml
receiver/src/settings/item/colours/: Colours.qml  SchemePreview.qml
receiver/src/settings/item/notifications/: Notifications.qml  RoundedSwitch.qml
receiver/src/settings/item/settingsuiapp/: AutoScroller.qml  CMakeLists.txt  HandwritingModeButton.qml  applicationsettings.cpp  applicationsettings.h  main.cpp  main.qml
receiver/src/settings/item/settingsuiapp/DeviceUtilities/QtButtonImageProvider/: CMakeLists.txt  QtButton.qml  plugin_p.h
receiver/src/settings/item/settingsuiapp/DeviceUtilities/SettingsUI/: CMakeLists.txt  SettingsUI.qml
receiver/src/settings/item/settingsuiapp/DeviceUtilities/SettingsUI/Network/: AddressListEntry.qml  CMakeLists.txt  ComboBoxEntry.qml  CustomSwitch.qml  CustomTableView.qml  EditWiredSettings.qml  IpAddressTextField.qml  NetworkListView.qml  NetworkSettings.qml  PassphraseEnter.qml  WifiSelectorDelegate.qml  WifiSignalMonitor.qml
receiver/src/settings/item/settingsuiapp/DeviceUtilities/SettingsUI/Network/icons/scripts/: rimages.sh
receiver/src/settings/item/wifi/: CredentialDialog.qml  PassphraseEnter.qml  WifiScreen.qml  WifiSelectorDelegate.qml  WifiSettings.qml
receiver/src/setup/: ActivationScreen.qml  ConnectScreen.qml  DateDigitField.qml  DateOfBirthPopup.qml  DeviceCard.qml  SetupScreen.qml
receiver/src/video/: VideoScreen.qml
web/: README.md  package-lock.json
web/backend/: README.md  start.sh
web/backend/database/: schema.sql
web/backend/server/: package-lock.json  package.json  server.js
web/frontend/: index.html  package-lock.json  package.json
web/frontend/src/: Auth.jsx  Device.jsx  Help.jsx  Home.jsx  index.css  main.jsx
